--- a/.hintrc
+++ b/.hintrc
@@ -14,7 +14,13 @@
     "meta-charset-utf-8": "off",
     "meta-viewport": "off",
     "axe/text-alternatives": "off",
-    "axe/name-role-value": "off"
+    "axe/name-role-value": "off",
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
+    ]
   },
   "browserslist": [
     "defaults",
